apps/foo-bar/deployment-foo.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  selector:
    matchLabels:
      app: foo
  replicas: 4
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args:
            - "-text=foo"
          ports:
            - containerPort: 5678
              protocol: TCP
          resources:
            requests:
              cpu: 200m
