apps/foo-bar/service-bar.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
  labels:
    app: bar
spec:
  replicas: 4
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
      name: http
  selector:
    app: bar
