apps/foo-bar/service-foo.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  labels:
    app: foo
spec:
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
      name: http
  selector:
    app: foo
